# quant-qmt

./: .editorconfig  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/workflows/: ci.yml
docker/: Dockerfile.client
docs/: api.md  architecture.md  deployment-topologies.md  docker.md  qmt-background.md  remote-usage.md  small-cap-demo.md  troubleshooting.md  validation-report.md  windows-setup.md
examples/python/: basic_client.py  small_cap_demo.py
scripts/windows/: bootstrap.bat  bootstrap.ps1  qmt.bat  qmt.ps1  start_gateway.bat  start_gateway.ps1
src/quant_qmt/: __init__.py  __main__.py  cli.py  config.py  logging_utils.py
src/quant_qmt/gateway/: __init__.py  app.py  helpers.py  routes_account.py  routes_data.py  routes_health.py  routes_query.py  routes_trade.py  state.py
src/quant_qmt/sdk/: __init__.py  client.py
src/quant_qmt/strategy/: __init__.py  small_cap_proxy.py
tests/: test_cli.py  test_config.py  test_helpers.py  test_strategy_small_cap_proxy.py
